[gd_scene load_steps=5 format=3 uid="uid://dafprxubj1sn6"]

[ext_resource type="Script" path="res://tack_shooter.gd" id="1_5krvb"]
[ext_resource type="Texture2D" uid="uid://dwmth1sc1chon" path="res://towerDefense_tile180.png" id="2_lfimb"]
[ext_resource type="Texture2D" uid="uid://b1xtosvw57baw" path="res://tackshooter.png" id="3_6km3t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gy0gw"]
radius = 863.99

[node name="TackShooter" type="CharacterBody2D"]
script = ExtResource("1_5krvb")

[node name="Base" type="Sprite2D" parent="."]
position = Vector2(-0.25, 4.75)
scale = Vector2(5, 5)
texture = ExtResource("2_lfimb")

[node name="Turret" type="Sprite2D" parent="."]
modulate = Color(0, 1, 1, 1)
position = Vector2(1.5, 7.49999)
scale = Vector2(5, 5)
texture = ExtResource("3_6km3t")

[node name="Range" type="Area2D" parent="."]
position = Vector2(-11.5, -4.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
scale = Vector2(0.75, 0.75)
shape = SubResource("CircleShape2D_gy0gw")

[node name="Timer" type="Timer" parent="."]

[node name="AmmoBar" type="ProgressBar" parent="."]
modulate = Color(0.505882, 0.811765, 0.403922, 1)
custom_minimum_size = Vector2(300, 50)
offset_left = -145.0
offset_top = -155.0
offset_right = 155.0
offset_bottom = -105.0
show_percentage = false

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
